add pyshepseg folder

--- a/segmentExample.ipynb
+++ b/segmentExample.ipynb
@@ -8,12 +8,17 @@
     "This notebook gives an example of how to use [pyshepseg](https://www.pyshepseg.org) to segment an image of any size, extract statistics associated with the segments and create a vector version of the output.\n",
     "\n",
     "You'll need to install both [RIOS](https://www.rioshome.org/en/latest/#downloads) and [pyshepseg](https://www.pyshepseg.org/en/latest/#installation) to make this work, ideally in a new environment.\n",
+    "\n",
+    "Note that there seems to be a bug in the statistics generation that I think is related to the use of JPEG compression in tiff files. If statistics are not generated, try forst translating the image using somthing like:\n",
+    "```\n",
+    "gdal_translate -of GTiff -co COMPRESS=DEFLATE -co TILED=YES -co BIGTIFF=YES INFILE_COMPRESSTED_WITH_JPEG.tif OUTFILE_COMPRESSED_WITH_DEFLATE.tif\n",
+    "```\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +54,7 @@
     "RGBFILE = LAYERNAME + '_rgb.tif'\n",
     "IDFILE = LAYERNAME + '_id.tif'\n",
     "SEGFILE = LAYERNAME + '_seg.gpkg'\n",
+    "CSVFILE = LAYERNAME + '_rat.csv'\n",
     "\n",
     "# Get the NoData value of the input file\n",
     "noData = getNodata(RASTER)"
@@ -273,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +293,7 @@
     "colNames.insert(0,'Index')\n",
     "header = ','.join(colNames)\n",
     "# Write the file\n",
-    "np.savetxt('rasterAttributes.csv',allData,fmt='%8.3f',delimiter=',',header=header,comments='')\n"
+    "np.savetxt(CSVFILE,allData,fmt='%8.3f',delimiter=',',header=header,comments='')\n"
    ]
   },
   {
