install instructions in notebook

--- a/segmentExample.ipynb
+++ b/segmentExample.ipynb
@@ -9,11 +9,21 @@
     "\n",
     "You'll need to install both [RIOS](https://www.rioshome.org/en/latest/#downloads) and [pyshepseg](https://www.pyshepseg.org/en/latest/#installation) to make this work, ideally in a new environment.\n",
     "\n",
-    "Note that there seems to be a bug in the statistics generation that I think is related to the use of JPEG compression in tiff files. If statistics are not generated, try forst translating the image using somthing like:\n",
+    "Note that there seems to be a bug in the statistics generation that I think is related to the use of JPEG compression in tiff files. If statistics are not generated, try first translating the image using something like:\n",
     "```\n",
     "gdal_translate -of GTiff -co COMPRESS=DEFLATE -co TILED=YES -co BIGTIFF=YES INFILE_COMPRESSTED_WITH_JPEG.tif OUTFILE_COMPRESSED_WITH_DEFLATE.tif\n",
     "```\n",
-    "\n"
+    "\n",
+    "To run this it might be useful to set up a new environment\n",
+    "f you're new to this, I'd recommend starting with [Miniconda](https://docs.conda.io/en/latest/miniconda.html) then installing the required packages in a new environment. I'd also recommend replacing conda with mamba to speed up the solving of python dependencies. Something like this should work:\n",
+    "```\n",
+    "conda create --name seg python=3.9\n",
+    "conda activate seg \n",
+    "conda install -c conda-forge mamba\n",
+    "mamba install -c conda-forge jupyterlab rios gdal numpy numba pip scikit-learn\n",
+    "```\n",
+    "\n",
+    "Then either use the copy of pyshepseg in this repo, or (much) better install it using the [install directions](https://www.pyshepseg.org/en/latest/#installation) on the pyshepseg website."
    ]
   },
   {
