--- a/segmentExample.ipynb
+++ b/segmentExample.ipynb
@@ -284,12 +284,12 @@
    "metadata": {},
    "source": [
     "## Cluster the Raster Attributes\n",
-    "This is a simple example of how to use KMeans on the raster attributes to cluster the segments. This is a very simple example, and you might want to use something more sophisticated from [scikit-learn](https://scikit-learn.org/stable/modules/clustering.html) or [hdbscan](https://hdbscan.readthedocs.io/en/latest/how_hdbscan_works.html).\n"
+    "This is a simple example of how to use KMeans on the raster attributes to cluster the segments. This is a simple example, and you might want to use something more sophisticated from [scikit-learn](https://scikit-learn.org/stable/modules/clustering.html) or [hdbscan](https://hdbscan.readthedocs.io/en/latest/how_hdbscan_works.html).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -316,12 +316,12 @@
    "metadata": {},
    "source": [
     "### Select the attributes you want to use for clustering\n",
-    "Here I am just selecting the means, but feel free to use any of the attributes in the RAT or make your with with ratios etc."
+    "Here I am just selecting the means, but feel free to use any of the attributes in the RAT or even add additional attributes using band ratios etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extract the raster attribues into a CSV file\n",
+    "## Extract the raster attributes into a CSV file\n",
     "This is a utility function that just pulls the raster attributes into a simple CSV file that you can then join to the vector file in a GIS.\n",
     "\n",
     "The linking attribute is the segid, which is the same as the segid in the vector file. See the animated gif in the readme for an example of how to do this in QGIS."
